# rules_gitops

./: .bazelignore  .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  create_kind_cluster.sh  e2e_test.sh  go.mod  go.sum
.github/workflows/: ci.yaml  release.yaml
docs/: architecture.md
docs/plans/: 2026-02-19-rules-gitops-port-design.md  2026-02-19-rules-gitops-port-plan.md  2026-02-20-ci-release-design.md  2026-02-20-documentation-design.md  2026-02-20-documentation-plan.md
examples/: .gitignore  BUILD  MODULE.bazel  README.md  e2e-test.sh
examples/helloworld/: BUILD  helloworld.go
gitops/: defs.bzl
gitops/bazel/: BUILD  README.md  bazeltargets.go  bazeltargets_test.go  doc.go
gitops/commitmsg/: BUILD  README.md  commitmsg.go  commitmsg_test.go  doc.go
gitops/digester/: BUILD  README.md  digester.go  digester_test.go  doc.go
gitops/exec/: BUILD  README.md  doc.go  exec.go  exec_test.go
gitops/git/: BUILD  README.md  doc.go  export_test.go  provider.go  provider_test.go  repo.go  repo_test.go
gitops/git/bitbucket/: BUILD  README.md  bitbucket.go  bitbucket_test.go  doc.go
gitops/git/github/: BUILD  README.md  doc.go  github.go  github_test.go
gitops/git/gitlab/: BUILD  README.md  doc.go  gitlab.go  gitlab_test.go
gitops/prer/: BUILD  README.md  doc.go  export_test.go  prer.go  prer_test.go
gitops/prer/cmd/: BUILD  main.go
resolver/: BUILD  README.md  doc.go  export_test.go  resolver.go  resolver_test.go
resolver/cmd/: BUILD  main.go
skylib/: BUILD.bazel  README.md  external_image.bzl  k8s.bzl  oci_push_launcher.sh  push.bzl  run_in_workspace.bzl  stamp.bzl  templates.bzl
skylib/kustomize/: BUILD.bazel  README.md  extensions.bzl  kustomize.bzl
stamper/: BUILD  README.md  doc.go  stamper.go  stamper_test.go
stamper/cmd/: BUILD  main.go
templating/: BUILD  README.md  doc.go  engine.go  engine_test.go
templating/cmd/: BUILD  main.go
testing/it_manifest_filter/: BUILD  README.md  doc.go  export_test.go  filter.go  filter_test.go
testing/it_manifest_filter/cmd/: BUILD  main.go
testing/it_manifest_filter/testdata/: statefulset2.expected.yaml  statefulset3.expected.yaml
testing/it_sidecar/: BUILD  README.md  doc.go  sidecar.go
testing/it_sidecar/client/: BUILD  README.md  doc.go  sidecar_client.go
testing/it_sidecar/cmd/: BUILD  main.go
testing/it_sidecar/stern/: BUILD  README.md  container_state.go  doc.go  run.go  tail.go  watch.go
