module(
    name = "rules_gitops",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_goccy_go_json", "com_github_goccy_go_yaml", "com_github_google_go_github_v68", "com_github_stretchr_testify", "com_github_valyala_fasttemplate", "com_gitlab_gitlab_org_api_client_go", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go")

gitops = use_extension("//skylib/kustomize:extensions.bzl", "gitops")
use_repo(gitops, "kustomize_bin")
