module(
    name = "rules_gitops_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_gitops", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "platforms", version = "0.0.10")

local_path_override(
    module_name = "rules_gitops",
    path = "..",
)

go_sdk = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_sdk",
)

go_sdk.download(version = "1.25.0")

gitops = use_extension(
    "@rules_gitops//skylib/kustomize:extensions.bzl",
    "gitops",
)

use_repo(gitops, "kustomize_bin")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_static",
    digest = "sha256:3d0f463de06b7ddff27684ec3bfd0b54a425149d0f8685308b1fdf297b0265e9",
    image = "gcr.io/distroless/static",
    platforms = ["linux/amd64"],
)

use_repo(oci, "distroless_static")
