exports_files([
    "run-all.sh.tpl",
    "kubectl.sh.tpl",
    "nameprefix_deployment_labels_config.yaml",
    "namesuffix_deployment_labels_config.yaml",
])

sh_binary(
    name = "set_namespace",
    srcs = ["set_namespace.sh"],
    data = [
        "@kustomize_bin//:kustomize",
    ],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
